# ProjectIcarus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
IcarusChallenger/: CMakeLists.txt  DetectionLayout.hpp  IcarusChallenger.cpp  IcarusChallenger.hpp  IcarusDetector.cpp  IcarusDetector.hpp  Launcher.cpp
IcarusChallenger/Behaviors/: ComputingBigEnergyHitPoint.cpp  ComputingBigEnergyHitPoint.hpp  ComputingSmallEnergyHitPoint.cpp  ComputingSmallEnergyHitPoint.hpp  DetectingPanel.cpp  DetectingPanel.hpp  DetectingR.cpp  DetectingR.hpp  DisplayingPicture.hpp  IsBigEnergyEnable.hpp  IsSmallEnergyEnable.hpp  ReadingCamera.cpp  ReadingCamera.hpp  ReadingPicture.hpp  ReadingPictures.hpp  SendingCommand.cpp
IcarusChallenger/Framework/: ProcessorBase.cpp
IcarusChallenger/Modules/: AngleTool.hpp  CPUAffinityTool.cpp  CRCTool.hpp  GeneralMessageTranslator.cpp  GeometryFeature.cpp  GeometryFeature.hpp  LastestValue.hpp  Signal.proto  TurretCommand.proto
IcarusDetector/: CMakeLists.txt  DetectionLayout.hpp  IcarusDetector.cpp  IcarusDetector.hpp  Launcher.cpp
IcarusDetector/Behaviors/: DisplayingPicture.hpp  FilteringArea.cpp  FilteringArea.hpp  FilteringArmors.cpp  FilteringArmors.hpp  FilteringContours.cpp  FilteringContours.hpp  FilteringLightBars.cpp  FilteringLightBars.hpp  ReadingCamera.cpp  ReadingCamera.hpp  ReadingPicture.hpp  ReadingPictures.hpp  SendingCommand.cpp  SendingCommand.hpp
IcarusDetector/Checkers/: ArmorCheckerBase.hpp  FarArmorChecker.hpp  FarLightBarChecker.hpp  LightBarCheckerBase.hpp  MediumArmorChecker.hpp  MediumLightBarChecker.hpp  NearArmorChecker.hpp  NearLightBarChecker.hpp
IcarusDetector/Components/: ContourElement.hpp  PONElement.hpp
IcarusDetector/Framework/: CheckerBase.hpp  ProcessorBase.cpp  ProcessorBase.hpp
IcarusDetector/Modules/: CPUAffinityTool.hpp  CRCTool.cpp  FastDilate.cu  FastDilate.hpp  ImageDebugUtility.cpp  ImageDebugUtility.hpp  PCATool.cpp  PCATool.hpp  PnPDistanceEstimator.cpp  PnPDistanceEstimator.hpp  Quadtree.cpp  Quadtree.hpp  RectangleTool.cpp  RectangleTool.hpp  TurretCommand.proto
SignalSender/: CMakeLists.txt  GeneralMessageTranslator.hpp  Launcher.cpp
